contrast issues fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -171,6 +171,6 @@ footer p {
 }
 
 #lastmodified {
-    color: rgb(228, 228, 228);
+    color: rgb(245, 245, 245);
     padding-top: 0;
 }
